--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,37 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Libreria_Twitter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.Contornos_de_Desenvolvemento-bin=D:\\Clase\\Contornos de Desenvolvemento\\bin
-file.reference.Contornos_de_Desenvolvemento-lib=D:\\Clase\\Contornos de Desenvolvemento\\lib
-file.reference.Contornos_de_Desenvolvemento-powered-by-badge=D:\\Clase\\Contornos de Desenvolvemento\\powered-by-badge
-file.reference.Contornos_de_Desenvolvemento-twitter4j-appengine=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-appengine
-file.reference.Contornos_de_Desenvolvemento-twitter4j-async=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-async
 file.reference.Contornos_de_Desenvolvemento-twitter4j-core=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-core
-file.reference.Contornos_de_Desenvolvemento-twitter4j-examples=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-examples
-file.reference.Contornos_de_Desenvolvemento-twitter4j-http2-support=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-http2-support
-file.reference.Contornos_de_Desenvolvemento-twitter4j-stream=D:\\Clase\\Contornos de Desenvolvemento\\twitter4j-stream
-file.reference.twitter4j-appengine-4.0.7.jar=C:\\Users\\Samuel\\Downloads\\twitter4j-4.0.7\\twitter4j-appengine\\twitter4j-appengine-4.0.7.jar
-file.reference.twitter4j-async-4.0.7.jar=C:\\Users\\Samuel\\Downloads\\twitter4j-4.0.7\\lib\\twitter4j-async-4.0.7.jar
 file.reference.twitter4j-core-4.0.7.jar=C:\\Users\\Samuel\\Downloads\\twitter4j-4.0.7\\lib\\twitter4j-core-4.0.7.jar
-file.reference.twitter4j-examples-4.0.7.jar=C:\\Users\\Samuel\\Downloads\\twitter4j-4.0.7\\lib\\twitter4j-examples-4.0.7.jar
-file.reference.twitter4j-stream-4.0.7.jar=C:\\Users\\Samuel\\Downloads\\twitter4j-4.0.7\\lib\\twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Contornos_de_Desenvolvemento-bin}:\
-    ${file.reference.Contornos_de_Desenvolvemento-lib}:\
-    ${file.reference.Contornos_de_Desenvolvemento-powered-by-badge}:\
-    ${file.reference.Contornos_de_Desenvolvemento-twitter4j-appengine}:\
-    ${file.reference.Contornos_de_Desenvolvemento-twitter4j-async}:\
     ${file.reference.Contornos_de_Desenvolvemento-twitter4j-core}:\
-    ${file.reference.Contornos_de_Desenvolvemento-twitter4j-examples}:\
-    ${file.reference.Contornos_de_Desenvolvemento-twitter4j-http2-support}:\
-    ${file.reference.Contornos_de_Desenvolvemento-twitter4j-stream}:\
-    ${file.reference.twitter4j-appengine-4.0.7.jar}:\
-    ${file.reference.twitter4j-async-4.0.7.jar}:\
-    ${file.reference.twitter4j-core-4.0.7.jar}:\
-    ${file.reference.twitter4j-examples-4.0.7.jar}:\
-    ${file.reference.twitter4j-stream-4.0.7.jar}
+    ${file.reference.twitter4j-core-4.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
